--- a/css/styles.css
+++ b/css/styles.css
@@ -81,3 +81,25 @@ h3 {
  margin-top: 50px;
  font-weight: var(--BoldFont);
 }
+
+.pokemon-list {
+list-style: none;
+}
+
+.button-class {
+	background-color:  var(--LighterPurple)
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	-webkit-transition-duration: 0.4s; 
+	transition-duration: 0.4s;
+	cursor: pointer;
+	background-color: white;
+	color: black;
+	border: 5px solid var(--ButtonPurple);
+}
