--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,25 @@ h3 {
 .container {
  margin: 0 auto;
  text-align: center;
- margin-top: 50px;
+ margin-top: 20px;
  font-weight: var(--BoldFont);
+}
+
+#filter_pokemons {
+  width: 100%;
+  padding: 10px;
 }
 
 .pokemon-list {
 list-style: none;
+margin: 0;
+padding: 0;
+}
+
+.pokemon-item {
+margin: 10px;
+text-align: center;
+padding: 20px;
 }
 
 .button-class {
