--- a/css/styles.css
+++ b/css/styles.css
@@ -21,23 +21,18 @@ primary background color - #F3EEEA  or #FFC7C7;
   --AnchorActive: #044a16;
   --ButtonPurple: #65128e;
   --BorderBlack: rgba(0, 0, 0, 0.3);
-  --SunYellow: #edc655;
-  --SunMiddle: #fcffad;
-  --SunOrange: #f76414;
-  --RegularFont: 400;
+  --RegularFontWeight: 400;
   --BoldFont: 700;
-  --GeneralFont: 16px;
-  --RegularH1: 30px;
-  --RegularH2: 24px;
-  --RegularH3: 18px;
-  --MiddleH1: 25px;
-  --SmallerH1: 20px;
+  --GeneralFontSize 16px;
+  --LargeFontSize: 40px;
+  --MediumFontSize: 30px;
+  --SmallFontSize: 14px;
 }
 
 html {
   font-family: "Maitree", serif;
-  font-weight: var(--RegularFont);
-  font-size: var(--GeneralFont);
+  font-weight: var(--RegularFontWeight);
+  font-size: var(--GeneralFontSize);
   line-height: 1.6;
   background-color: var(--LighterBackground);
   color: var(--BlackText);
@@ -49,20 +44,11 @@ html {
 /* Typography */
 
 h1 {
-  font-size: var(--RegularH1);
+  font-size: var(--LargeFontSize);
   font-weight: var(--BoldFont);
   color: var(--AccentText);
 }
 
-h2 {
-  font-size: var(--RegularH2);
-  font-weight: var(--BoldFont);
-}
-
-h3 {
-  font-size: var(--RegularH3);
-  font-weight: var(--BoldFont);
-}
 /* Layout */
 #personal_logo {
   height: 75px;
@@ -80,11 +66,7 @@ h3 {
  text-align: center;
  margin-top: 20px;
  font-weight: var(--BoldFont);
-}
-
-#filter_pokemons {
-  width: 100%;
-  padding: 10px;
+ font-size: var(--MediumFontSize);
 }
 
 .pokemon-list {
@@ -102,17 +84,129 @@ padding: 20px;
 .button-class {
 	background-color:  var(--LighterPurple)
 	border: none;
-	color: white;
+	width: 15em; 
 	padding: 16px 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
+	font-size: var(--MediumFontSize);
 	margin: 4px 2px;
 	-webkit-transition-duration: 0.4s; 
 	transition-duration: 0.4s;
 	cursor: pointer;
 	background-color: white;
-	color: black;
+	color: var(--AccentText);
 	border: 5px solid var(--ButtonPurple);
+  border-radius: 5px;
+}
+
+.button-class:hover,
+.button.class:focus,
+.button.class:active {
+    cursor: pointer;
+    background-color: var(--AccentText);
+    color:white
+}
+
+#modal-container {
+    display: none;
+  }
+  
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  
+  /* to show it above other content */
+  z-index: 999; 
+  
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+  
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 4px solid var(--ButtonPurple);
+  background: white;
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+  text-align: center;
+  font-size: var(--MediumFontSize);
+  font-weight: 700;
+}
+
+.modal-close {
+  float: right;    
+  background-color: white;
+  border-radius: 4px;
+  border: 4px solid var(--ButtonPurple);
+  text-align: center;
+  text-decoration: none;
+  font-size: var(--MediumFontSize);
+  font-weight: 700;
+  transition-duration: 2s;
+}
+
+ .modal-close:hover,
+ .modal-close.class:focus,
+ .modal-close:active {
+    cursor: pointer;
+    background-color: var(--AccentText);
+    color:white
+ }
+  
+  .modal h1 {
+    margin-top: 0;
+  }
+  
+  .modal p {
+    margin-bottom: 0;
+  }
+
+  @media all and (max-width: 440px) {
+
+    /* decrease font sizes and padding for small screens */
+    page-header {
+      width: 400px;
+    }
+
+    body {
+        font-size: 13pt;
+        padding: 0 20px;
+    }
+
+    h1 {
+        font-size: var(--MediumFontSize);
+    }
+
+    .listItemButton {
+        font-size: 16pt;
+    }
+
+    ul {
+        padding: 5px;
+    }
+
+    ul li {
+        margin: 10px 5px;
+    }
+    .button-class {
+      width: 9em;
+      font-size: 20px;
+      border: 2px solid var(--ButtonPurple);
+    }
+
 }
